# stm32f411xe_min_requirements

./: CMakeLists.txt  README.md  STM32F411VET6.ld  start_gdb_server_demon.sh
scripts/: clear_flash.sh  write_flash.sh
src/: main.c  mcu_info.h  version_info.h
src/c_util/: tracer.c  tracer.h
src/cmsis/: stm32f4xx.h
src/driver/: gpio.c  gpio.h  rcc.c  rcc.h  timers.c  timers.h  usart.c  usart.h
src/system/: syscalls.c  system.c  system.h
util/: debug_target.sh
